# rust-rest

./: Cargo.toml
src/: errors.rs  main.rs
src/models/: mod.rs
src/services/: dogs.rs  mod.rs  openapi.rs
