[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.6.7", features = ["tokio"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
utoipa = "3.3.0"
utoipa-swagger-ui = "3.1.3"
